# python-samplerate2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  setup.py
.github/workflows/: pythonpackage.yml
examples/: play_modulation.py
src/: resampack.cpp  samplerate2.cpp
tests/: test_api.py  test_exception.py  test_resampack.py  test_resampack_api.py
